# HybridRendering

./: .gitignore  CMakeLists.txt  CompileShaders.bat  README.md  SolutionConfiguration.bat
bgfx/examples/common/: cube_atlas.h
bgfx/examples/common/debugdraw/: debugdraw.cpp
bgfx/examples/common/entry/: entry_windows.cpp
bgfx/examples/common/imgui/: icons_font_awesome.ttf.h
bgfx/include/bgfx/: bgfx.h
bgfx/src/: renderer_d3d11.cpp  renderer_d3d9.cpp
bgfx/tools/geometryv/: geometryv.cpp
cmake/: hybrid_rendering.cmake
dxup/src/d3d9/: d3d11_dynamic_buffer.cpp  d3d11_dynamic_buffer.h  d3d9_d3d11_resource.cpp  d3d9_d3d11_resource_mapping.cpp  d3d9_device.cpp  d3d9_device.h  d3d9_format.cpp  d3d9_format.h  d3d9_includes.h  d3d9_interface.cpp  d3d9_interface.h  d3d9_main.cpp  d3d9_query.cpp  d3d9_query.h  d3d9_renderer.cpp  d3d9_renderer.h  d3d9_state.cpp  d3d9_state.h  d3d9_state_cache.cpp  d3d9_state_cache.h  d3d9_surface.cpp  d3d9_surface.h  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_texture.cpp  d3d9_texture.h  d3d9_util.cpp  d3d9_util.h  d3d9_volume.cpp  d3d9_volume.h
dxup/src/dxgi/: dxgi_factory.cpp  dxgi_factory.h  dxgi_main.cpp
hybrid_rendering/shaders/src/cubes/: fs_cubes.sc  vs_cubes.sc
hybrid_rendering/src/: HybridRendering.cpp
